@@ -25,6 +25,8 @@ struct imp_dbh_st {
     int         init_commit;	/* initialize AutoCommit */
     int         pg_auto_escape;	/* initialize AutoEscape */
     int         pg_bool_tf;     /* do bools return 't'/'f' */
+    int         done_begin;     /* Have we done a begin?
+                                 Only used if AutoCommit is off. */
 #ifdef is_utf8_string
     int         pg_enable_utf8;	/* should we attempt to make utf8 strings? */
 #endif
